[gd_scene load_steps=12 format=3 uid="uid://cctjx2lhey38e"]

[ext_resource type="PackedScene" uid="uid://n5iv26l5gsf2" path="res://scene/core/player.tscn" id="1_7hnpo"]
[ext_resource type="Script" path="res://scene/game/game-map.gd" id="1_n6571"]
[ext_resource type="PackedScene" uid="uid://bcei26fhiuwfn" path="res://scene/game/frozen-map.tscn" id="3_focsm"]
[ext_resource type="PackedScene" uid="uid://d1pjmsekkiy57" path="res://scene/ui/nokia.tscn" id="3_nrk03"]
[ext_resource type="PackedScene" uid="uid://bspf32n5wp0pj" path="res://scene/fx/fx-snow.tscn" id="4_uay63"]
[ext_resource type="PackedScene" uid="uid://bu5ptnxlx0o3w" path="res://scene/ui/dialog.tscn" id="6_kx16t"]
[ext_resource type="PackedScene" uid="uid://4taukevrdihr" path="res://scene/enemies/shadow.tscn" id="9_5towt"]

[sub_resource type="Animation" id="Animation_2qc2c"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Nokia:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(65, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Nokia:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(100, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%PlayerCamera:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_fuwyk"]
resource_name = "phone-hide"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Nokia:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(65, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Nokia:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(36, -0.25, 0, 0.1, 40, 100, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%PlayerCamera:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(14, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_hea7x"]
resource_name = "phone-show"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Nokia:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(65, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Nokia:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(100, -0.25, 0, 0.1, -40, 36, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%PlayerCamera:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(14, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_offg3"]
_data = {
"RESET": SubResource("Animation_2qc2c"),
"phone-hide": SubResource("Animation_fuwyk"),
"phone-show": SubResource("Animation_hea7x")
}

[node name="LevelFrozen" type="Node"]
script = ExtResource("1_n6571")
metadata/_edit_vertical_guides_ = [84.0]
metadata/_edit_horizontal_guides_ = [48.0]

[node name="FrozenMap" parent="." instance=ExtResource("3_focsm")]

[node name="Shadows" type="Node2D" parent="."]
position = Vector2(0, -2)

[node name="Shadow" parent="Shadows" instance=ExtResource("9_5towt")]
position = Vector2(173, -37)

[node name="Player" parent="." instance=ExtResource("1_7hnpo")]
unique_name_in_owner = true
position = Vector2(-48, -1)

[node name="PlayerCamera" type="Camera2D" parent="Player"]
unique_name_in_owner = true
position = Vector2(0, -18)
limit_left = -500
limit_right = 500
limit_bottom = 10

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player/PlayerCamera"]
position = Vector2(0, -20)
remote_path = NodePath("../../../Snow")
update_rotation = false
update_scale = false

[node name="Marker2D" type="Marker2D" parent="Player"]
position = Vector2(21, -19)

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
position = Vector2(0, -39)
copy_mode = 2

[node name="Snow" parent="." instance=ExtResource("4_uay63")]
unique_name_in_owner = true
position = Vector2(-48, -39)
amount = 200
preprocess = 5.0
emission_rect_extents = Vector2(84, 10)
initial_velocity_min = 10.0
initial_velocity_max = 20.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="Nokia" parent="UI" instance=ExtResource("3_nrk03")]
position = Vector2(65, 100)

[node name="UIAnimationPlayer" type="AnimationPlayer" parent="UI"]
libraries = {
"": SubResource("AnimationLibrary_offg3")
}

[node name="DialogUI" parent="UI" instance=ExtResource("6_kx16t")]
visible = false
nbr_letters_per_second = 60

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="dialog_ended" from="UI/DialogUI" to="." method="_on_dialog_ui_dialog_ended"]
[connection signal="new_line_ended" from="UI/DialogUI" to="." method="_on_dialog_ui_new_line_ended"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
